# gemini_live

./: README.md  main.py  pyproject.toml
audio/: README.md  stream_audio_audio.py
audio/backup/: live_text2text_bak.py
audio/live_native/: basic_live_t2t.py  chirp3_tts.py  live_text2text.py  stt_live_t2t.py
audio/liveapi/: README.md  text2text.py
audio/non_native_audio/: README.md  stream_audio_text.py
audio/stt/: README.md  cloud_stt.py
audio/stt_liveapi_tts/: README.md  chirp3_tts.py  live_text2text.py  microphone.py  stt_livet2t_tts.py
audio/tts/: README.md  chirp3_tts.py  gemini_tts.py
